@@ -757,6 +757,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8180. AbstractFileSystem Implementation for WebHdfs. (snayak via jghoman)
 
+    HDFS-8811. Move BlockStoragePolicy name's constants from
+    HdfsServerConstants.java to HdfsConstants.java (vinayakumarb)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
